               via Stack)
   HBASE-2138  unknown metrics type (Stack via JD)
   HBASE-2152  Add default jmxremote.{access|password} files into conf
               (Lars George and Gary Helmling via Stack)
   HBASE-2154  Fix Client#next(int) javadoc
   HBASE-2146  RPC related metrics are missing in 0.20.3 since recent change
               (Gary Helmling via Stack)

  IMPROVEMENTS
   HBASE-1970  Export does one version only; make it configurable how many
               it does
   HBASE-1975  SingleColumnValueFilter: Add ability to match the value of
               previous versions of the specified column
               (Jeremiah Jacquet via Stack)
   HBASE-1987  The Put object has no simple read methods for checking what
               has already been added (Ryan Smith via Stack)
   HBASE-2011  Add zktop like output to HBase's master UI (Lars George via
               Andrew Purtell)
   HBASE-2018  Updates to .META. blocked under high MemStore load
   HBASE-2029  Reduce shell exception dump on console
               (Lars George and J-D via Stack)
   HBASE-2027  HConnectionManager.HBASE_INSTANCES leaks TableServers
               (Dave Latham via Stack)
   HBASE-2031  When starting HQuorumPeer, try to match on more than 1 address
   HBASE-2046  Remove CompactionLimitThread
   HBASE-2052  Make hbase more 'live' when comes to noticing table creation, 
               splits, etc., for 0.20.3
   HBASE-2049  Cleanup HLog binary log output (Dave Latham via Stack)
   HBASE-2060  Missing closing tag in mapreduce package info (Lars George via
               Andrew Purtell)
   HBASE-2028  Add HTable.incrementColumnValue support to shell (Lars George
               via Andrew Purtell)
   HBASE-2062  Metrics documentation outdated (Lars George via JD)
   HBASE-2045  Update trunk and branch zk to just-release 3.2.2.
   HBASE-2074  Improvements to the hadoop-config script (Bassam Tabbara via
               Stack)
   HBASE-2076  Many javadoc warnings